TIP 569 is Accepted with vote 8-0-0.
Yes votes received from

DP, KK, JD, SL, FV, KW, DF, JN

--- a/tip/569.md
+++ b/tip/569.md
@@ -1,12 +1,16 @@
 # TIP 569: Eliminate Comments That Serve Lint
 	Author:         Don Porter <dgp@users.sourceforge.net>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        6-Mar-2020
 	Post-History:
 	Keywords:       lint
 	Tcl-Version:    8.7
+        Vote-Summary:   Accepted 8/0/0
+        Votes-For:      DP, JD, KK, KW, SL, FV, DF, JN
+        Votes-Against:  none
+        Votes-Present:  none
 -----
 
 # Abstract
