--- a/tip/570.md
+++ b/tip/570.md
@@ -6,7 +6,7 @@
 	Created:        18-Mar-2020
 	Post-History:
 	Keywords:       Tk, bindings
-	Tk-Version:    8.7
+	Tcl-Version:    8.7
 -----
 
 # Abstract
