Editorial cleanup of 570

--- a/tip/570.md
+++ b/tip/570.md
@@ -1,4 +1,4 @@
-# TIP 570: gesture support for finger scrolling and "pinch to zoom"
+# TIP 570: Gesture Support for Finger Scrolling and "Pinch to Zoom"
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
@@ -11,24 +11,27 @@
 
 # Abstract
 
-Support for the gestures "finger scroll" and "pinch to zoom" are proposed in a platform neutral way.
+Support for the gestures "finger scroll" and "pinch to zoom" are proposed in a
+platform neutral way.
 
-This tip is not ready specified yet.
+**NB:** This tip is not ready specified yet.
 Anybody is invited to contribute.
 
 # Specification
 
 ## Overview
 
-Many systems (e.g. Windows, Linux Window Manager, Mac-OS, Android) nowdays support gestures in a generic manner.
-The gestures may be different and the input media may be different.
-Possible input media are a touch-screen or a touchpad.
+Many systems (e.g. Windows, Linux Window Manager, Mac-OS, Android) nowdays
+support gestures in a generic manner.  The gestures may be different and the
+input media may be different.  Possible input media are a touch-screen or a
+touchpad.
 
 The aim of this TIP is to make gestures provided by the system available within Tk.
 
 The targeted gestures are:
 
-   *   scrolling, for example by pointing two fingers on the touch-screen and moving it. This is often identical to the pan gesture.
+   *   scrolling, for example by pointing two fingers on the touch-screen and
+       moving it. This is often identical to the pan gesture.
    *   zooming, for example by pinching two fingers on a touch-screen.
 
 There is a direct relation to the displayed image if a touch-screen is used.
@@ -40,20 +43,47 @@ The following discussion is about possible implementations on different platform
 
 ### Windows
 
-Peter Spjuth has authored a Windows implementation in tk.branch pspjuth-touch: [https://core.tcl-lang.org/tk/timeline?r=pspjuth-touch]
+Peter Spjuth has authored a Windows implementation in tk.branch
+[pspjuth-touch](https://core.tcl-lang.org/tk/timeline?r=pspjuth-touch)
 
 The two gestures are implemented by the following virtual bind tags:
 
-   *   Zoom: "<<PinchToZoom>> %W %d %x %y %X %Y" : W: Window(below the fingers), d: descriptive dict (gesture =zoom, distance=finger distance), x,y: position.
-   *   Scroll: "<<Gesture>> %W %d %x %y %X %Y": Window(below the fingers), d: descriptive dict (gesture=pan, distance=finger distance > 0 for two fingers), x,y: position
+  * Zoom: `<<PinchToZoom>>` with substitutions `%W %d %x %y %X %Y`
+      * `%W`: Window (below the fingers)
+	  * `%d`: descriptive dict (**gesture**=**zoom**, **distance**=finger
+        distance)
+      * `%x,%y`: position.
+  * Scroll: `<<Gesture>>` with substitutions `%W %d %x %y %X %Y`
+      * `%W`: Window (below the fingers)
+	  * `%d`: descriptive dict (**gesture**=**pan**, **distance**=finger
+        distance > 0 for two fingers)
+      * `%x,%y`: position
 
 ### AndroWish
 
-Christian Werner has defined the following virtual binding tags.
-This information is copied from [http://www.androwish.org/home/wiki?name=sdltk+command].
+Christian Werner has defined the following virtual binding tags.  This
+information is copied and adapted from [the Androwish
+documentation](http://www.androwish.org/home/wiki?name=sdltk+command).
 
-   *   Zoom: "<<PinchToZoom>> %X %Y %x %y %s" : %X and %Y are substituted with the root window coordinate of the center of the two fingers, %x with the distance between the two fingers, and %y with the angle measured in 64 times degrees CCW starting at 3 o'clock. The finger state is reported in the %s substitution as 0 (zoom motion), 1 (zoom start, i.e. 2nd finger down event), 2 (zoom end by 1st finger up event), 3 (zoom end by 2nd finger up event)
-   *   Scroll: "<<FingerDown>>, <<FingerUp>>, <<FingerMotion>>" : Scrolling by two fingers may be implemented by observing those events. Documentation: A touch movement (sliding) event. The fields %x and %y are substituted with the finger position scaled to {0...9999} of the device screen or viewport, %X and %Y with the motion difference scaled to {-9999...+9999}, %t with the pressure scaled to {0...9999}, and %s with the finger identifier {1...10}. These substitutions are performed for all finger related touch events. 
+  * Zoom: `<<PinchToZoom>>` with substitutions `%X %Y %x %y %s`
+      * `%X` and `%Y` are substituted with the root window coordinate of the
+        center of the two fingers
+      * `%x` with the distance between the two fingers
+      * `%y` with the angle measured in 64 times degrees CCW starting at 3 o'clock.
+      * `%s` is the finger state: `0` (zoom motion), `1` (zoom start, i.e. 2nd
+        finger down event), `2` (zoom end by 1st finger up event), `3` (zoom
+        end by 2nd finger up event)
+   *   Scroll: `<<FingerDown>>`, `<<FingerUp>>`, `<<FingerMotion>>`
+
+    Scrolling by two fingers may be implemented by observing those events. The
+    following substitutions are supported for all these three finger-related
+    events:
+
+      * `%x` and `%y` are the finger position scaled to {0...9999} of the
+        device screen or viewport
+      * `%X` and `%Y` are the motion difference scaled to {-9999...+9999}
+      * `%t` is the pressure scaled to {0...9999}, and
+	  * `%s` is the finger identifier {1...10}
 
 ### Linux
 
@@ -66,7 +96,7 @@ This information is copied from [http://www.androwish.org/home/wiki?name=sdltk+c
 
 The following fragments are known:
 
-   *   tk.branch pspjuth-touch: [https://core.tcl-lang.org/tk/timeline?r=pspjuth-touch]
+   *   tk.branch [pspjuth-touch](https://core.tcl-lang.org/tk/timeline?r=pspjuth-touch)
    *   AndroWish
 
 # Discussion
@@ -75,4 +105,3 @@ The following fragments are known:
 # Copyright
 
 This document has been placed in the public domain.
-
