--- a/tip/566.md
+++ b/tip/566.md
@@ -1,6 +1,6 @@
 # TIP 566: Index usage in lset
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.conm>
-	State:          Draft
+	State:          Withdrawn
 	Type:           Project
 	Vote:           Pending
 	Created:        19-Feb-2020
