Update 552 to reflect -stripedbackground

--- a/tip/552.md
+++ b/tip/552.md
@@ -76,10 +76,10 @@ The \<\<TreeviewSelect\>\> virtual event triggers on any selection change includ
 
 ## Striped rows
 
-A new option **-striped** *bool* is added. This makes every other item get marked
-with the `alternate` state, and allows the theme to draw them in a
-different color. Built in themes are updated to put something fitting
-at that color.
+A new option **-striped** *bool* is added. This makes every other item to be
+drawn with the **-stripedbackground** color, if that option is set by the
+theme or tags.
+Built in themes are updated to put something fitting at that color.
 
 ## Column separators
 
@@ -97,6 +97,17 @@ item's tree column. Default is "w".
 
 A new item option **-height** *height* is added.
 This controls the height of the item, in multiples of **-rowheight**. Default is 1.
+
+# Rejected alternatives
+
+## Striped rows
+
+An earlier spec implemented **-striped** as an alternate state. This did not
+work well, since options are resolved in a certain order. Style defaults,
+tags, then Style maps. Since alternate was part of the style maps, it overrode
+any background in tags. The striped background should have less priority than
+tags, and be at the level of Style defaults.
+Thus it was moved to a **-stripedbackground** option.
 
 # Implementation
 
