Clarify imageanchor vs tags.

--- a/tip/552.md
+++ b/tip/552.md
@@ -92,6 +92,8 @@ Built in themes are updated to define the separators.
 A new item option **-imageanchor** *anchor* is added.
 This controls the placement of the image relative to the text in an
 item's tree column. Default is "w".
+For tags, **-imageanchor** work like **-image**, i.e. if not set in the
+item, it can be set by tags.
 
 ## Item height
 
