--- a/tip/568.md
+++ b/tip/568.md
@@ -214,7 +214,8 @@ They can be accompilshed as orthogonal matters in either sequence.
 
 # Reference Implementation
 
-See branch [dgp-properbytearray](https://core.tcl-lang.org/tcl/timeline?t=dgp-properbytearray).
+See branches [dgp-properbytearray](https://core.tcl-lang.org/tcl/timeline?t=dgp-properbytearray) (9.0)
+and [tip-568](https://core.tcl-lang.org/tcl/timeline?t=tip-568) (8.7).
 
 # Copyright
 
