add tcl version to header

--- a/tip/571.md
+++ b/tip/571.md
@@ -2,9 +2,10 @@
 	Author:         Rami Khaldi <rami.khaldi@fau.de>
 	State:          Draft
 	Type:           Project
+	Tcl-Version:    8.6
 -----
 
 # Abstract
 
-The aim of this TIP is to make the TCLX's profiler working with Tcl 8.6
+The aim of this TIP is to make the TCLX's profiler working with Tcl 8.6.
 
