--- a/tip/552.md
+++ b/tip/552.md
@@ -100,6 +100,11 @@ item, it can be set by tags.
 A new item option **-height** *height* is added.
 This controls the height of the item, in multiples of **-rowheight**. Default is 1.
 
+## Automatic -rowheight.
+
+If the style do not set -rowheight, it is filled in based an current font and layout for an item.
+An Item layout is measured with the style's settings, and the resulting height is used as default.
+
 # Rejected alternatives
 
 ## Striped rows
