Add cell tags to 552

--- a/tip/552.md
+++ b/tip/552.md
@@ -103,7 +103,18 @@ This controls the height of the item, in multiples of **-rowheight**. Default is
 ## Automatic -rowheight.
 
 If the style do not set -rowheight, it is filled in based an current font and layout for an item.
-An Item layout is measured with the style's settings, and the resulting height is used as default.
+An Item and a Cell layout is measured with the style's settings, and the resulting height is used as default.
+
+## Cell tags.
+
+To control appearance of individual cells, tags can be set on cells as well as items.
+The set of tags is shared between items and cells, so things like **tag configure** are not affected.
+
+A new subcommand **tag cell add** is added, mirroring the present **tag add** but operating on cells.
+
+A new subcommand **tag cell remove** is added, mirroring the present **tag remove** but operating on cells.
+
+A new subcommand **tag cell has** is added, mirroring the present **tag has** but operating on cells.
 
 # Rejected alternatives
 
