Close #571. As no changes in Tcl core were required

--- a/tip/571.md
+++ b/tip/571.md
@@ -1,13 +1,13 @@
 # TIP 571: Make TclX's profiler work properly with Tcl 8.6
 	Author:         Rami Khaldi <rami.khaldi@fau.de>
-	State:          Draft
+	State:          Withdrawn
 	Type:           Project
 	Tcl-Version:    8.6
 -----
 
 # Abstract
 
-The aim of this TIP is to make the TCLX's profiler working with Tcl 8.6.
+The aim of this TIP is to make the TCLX's profiler working with Tcl 8.6. The fix was only required in the Tclx library. No changes have been occurred in Tcl core.
 
 # Analysis
 
