Opened a ticket for discussion.

--- a/tip/568.md
+++ b/tip/568.md
@@ -196,7 +196,7 @@ value **NULL** is returned, and if the interpreter argument is not **NULL**,
 standard error messages and codes are left in it. Otherwise, a pointer
 to the byte sequence representation is returned (after creating it, if
 necessary) and the number of bytes in the sequence is written to the
-storage at the output pointer, which is not permitted to be **NULL**.
+storage at the output pointer, if it is not **NULL**.
 
 
 
