Repair link syntax.

--- a/tip/573.md
+++ b/tip/573.md
@@ -50,7 +50,7 @@ Implementation is in branch tip-573
 
 # Discussion
 
-See ticket [5dabd088ee].
+See ticket [5dabd088ee](https://core.tcl-lang.org/tcl/tktview/5dabd088ee).
 
 # Copyright
 
