--- a/tip/352.md
+++ b/tip/352.md
@@ -8,20 +8,70 @@
 	Created:        14-Jul-2009
 	Post-History:   
 -----
+<!-- TOC BEGIN (auto generated with tiptoc) -->
+* <a href='#toc-2'>Abstract</a>
+    * <a href='#toc-3'>NOTE</a>
+* <a href='#toc-4'>Introduction</a>
+* <a href='#toc-5'>Executable files</a>
+* <a href='#toc-6'>Packages and namespaces</a>
+    * <a href='#toc-7'>Package names</a>
+    * <a href='#toc-8'>Version numbers</a>
+    * <a href='#toc-9'>Package namespaces</a>
+    * <a href='#toc-10'>Structure</a>
+* <a href='#toc-11'>How to organize a code file</a>
+    * <a href='#toc-12'>The file header</a>
+    * <a href='#toc-13'>Multi-file packages</a>
+    * <a href='#toc-14'>Procedure headers</a>
+    * <a href='#toc-15'>Procedure declarations</a>
+    * <a href='#toc-16'>Parameter order</a>
+    * <a href='#toc-17'>Procedure bodies</a>
+* <a href='#toc-18'>Naming conventions</a>
+    * <a href='#toc-19'>General considerations</a>
+    * <a href='#toc-20'>Basic syntax rules</a>
+* <a href='#toc-21'>Low-level coding conventions</a>
+    * <a href='#toc-22'>Indents are 4 spaces</a>
+    * <a href='#toc-23'>Code comments occupy full lines</a>
+    * <a href='#toc-24'>Continuation lines are indented 8 spaces</a>
+    * <a href='#toc-25'>Only one command per line</a>
+    * <a href='#toc-26'>Curly braces: \{ goes at the end of a line</a>
+    * <a href='#toc-27'>Parenthesize expressions</a>
+    * <a href='#toc-28'>Always use the return statement</a>
+    * <a href='#toc-29'>Switch statements</a>
+    * <a href='#toc-30'>If statements</a>
+* <a href='#toc-31'>Documenting code</a>
+    * <a href='#toc-32'>Document things with wide impact</a>
+    * <a href='#toc-33'>Don't just repeat what's in the code</a>
+    * <a href='#toc-34'>Document each thing in exactly one place</a>
+    * <a href='#toc-35'>Write clean code</a>
+    * <a href='#toc-36'>Document as you go</a>
+    * <a href='#toc-37'>Document tricky situations</a>
+* <a href='#toc-38'>Testing</a>
+    * <a href='#toc-39'>Basics</a>
+    * <a href='#toc-40'>Organizing tests</a>
+    * <a href='#toc-41'>Coverage</a>
+    * <a href='#toc-42'>Fixing bugs</a>
+    * <a href='#toc-43'>Tricky features</a>
+    * <a href='#toc-44'>Test independence</a>
+* <a href='#toc-45'>Miscellaneous</a>
+    * <a href='#toc-46'>Porting issues</a>
+    * <a href='#toc-47'>Changes files</a>
+* <a href='#toc-48'>Copyright</a>
 
-# Abstract
+<!-- TOC END -->
+
+# <a id='toc-2'></a>Abstract
 
 This document describes a set of conventions that it is suggested people use
 when writing Tcl code. It is substantially based on the Tcl/Tk Engineering
 Manual [[247]](247.md).
 
-## NOTE
+## <a id='toc-3'></a>NOTE
 
 _A transcription of the original version \(dated August 22, 1997\) of this file
 into PDF is available online at <http://www.tcl.tk/doc/styleGuide.pdf> - Donal
 K. Fellows._
 
-# Introduction
+# <a id='toc-4'></a>Introduction
 
 This is a manual for people who are developing Tcl code for Wish or any other
 Tcl application. It describes a set of conventions for writing code and the
@@ -67,7 +117,7 @@ and suggestions for writing comments. Section 8 describes how to write and
 maintain test suites. Section 9 contains a few miscellaneous topics, such as
 keeping a change log.
 
-# Executable files
+# <a id='toc-5'></a>Executable files
 
 An executable is a file, collection of files, or some other collection of Tcl
 code and necessary runtime environment. Often referred to as applications, an
@@ -138,7 +188,7 @@ platform:
     that manipulate resources. Additional scripts can also be placed in TEXT
     resource to make the application completely contained.
 
-# Packages and namespaces
+# <a id='toc-6'></a>Packages and namespaces
 
 Tcl applications consist of collections of _packages_. Each package provides
 code to implement a related set of features. For example, Tcl itself is a
@@ -157,7 +207,7 @@ procedures. Side effects when loading a package should be avoided. This
 document will focus on packages written entirely in Tcl. For a discussion of
 packages built in C or C and Tcl see the _Tcl/Tk Engineering Manual_.
 
-## Package names
+## <a id='toc-7'></a>Package names
 
 Each package should have a unique _name_. The name of the package is used to
 identify the package. It is also used as the name of the namespace that the
@@ -176,7 +226,7 @@ sites. It is also suggested \(but not required\) that you register your name on
 the NIST Identifier Collaboration Service \(NICS\). It is located at:
 <http://pitch.nist.gov/nics>
 
-## Version numbers
+## <a id='toc-8'></a>Version numbers
 
 Each package has a two-part version number such as 7.4. The first number \(7\)
 is called the major version number and the second \(4\) is called the minor
@@ -190,14 +240,14 @@ existing code and scripts will have to be modified to run with the new
 version, then the major version number increments and the minor version number
 resets to zero \(e.g., from 7.4 to 8.0\).
 
-## Package namespaces
+## <a id='toc-9'></a>Package namespaces
 
 As of version 8.0, Tcl supports namespaces to hide the internal structure of a
 package. This helps avoid name collisions and provides a simpler way to manage
 packages. All packages written for Tcl 8.0 or newer should use namespaces. The
 name of the name space should be the same as the package name.
 
-## Structure
+## <a id='toc-10'></a>Structure
 
 There are a couple of ways to deploy a package of Tcl commands.
 
@@ -216,7 +266,7 @@ There are a couple of ways to deploy a package of Tcl commands.
    **pkgIndex.tcl** file. The **pkgIndex** resource should have the same
    format as the **pkgIndex.tcl** file.
 
-# How to organize a code file
+# <a id='toc-11'></a>How to organize a code file
 
 Each source code file should either contain an entire application or a set of
 related procedures that make up a package or a another type of identifiable
@@ -229,7 +279,7 @@ to remember everything that the file does. If a file is much shorter than
 this, then you may end up with too many files in a directory, which is also
 hard to manage.
 
-## The file header
+## <a id='toc-12'></a>The file header
 
 The first part of a code file is referred to as the _header_. It contains
 overall information that is relevant throughout the file. It consists of
@@ -283,7 +333,7 @@ Please structure your header pages in exactly the order given above and follow
 the syntax of the example as closely as possible. The file **fileHead.tcl**
 [_not available_] provides a template for a header page.
 
-## Multi-file packages
+## <a id='toc-13'></a>Multi-file packages
 
 Some packages may be too large to fit into one file. You may want to consider
 breaking the package into multiple independent packages. However, when that is
@@ -295,7 +345,7 @@ package in this manner or utilities like **pkg\_mkIndex** will not work
 correctly. Finally, the header to the various files should make it clear which
 file is the primary file and which are supporting files.
 
-## Procedure headers
+## <a id='toc-14'></a>Procedure headers
 
 After the header you will have one or more procedures. Each procedure will
 begin with a _procedure header_ that gives overall documentation for the
@@ -345,7 +395,7 @@ procedure header which should be used as a base for all new Tcl commands.
 Follow the syntax of the above example exactly \(same indentation, double-dash
 after the procedure name, etc.\).
 
-## Procedure declarations
+## <a id='toc-15'></a>Procedure declarations
 
 The procedure declaration should also follow exactly the syntax in the example
 above. Note that the procedure is defined outside the namespace command that
@@ -354,7 +404,7 @@ defines the export list and namespace globals. The first line gives the
 many arguments, they may spill onto additional lines \(see Sections 6.1 and 6.3
 for information about indentation\).
 
-## Parameter order
+## <a id='toc-16'></a>Parameter order
 
 Procedure parameters may be divided into three categories. _In_ parameters
 only pass information into the procedure \(either directly or by pointing to
@@ -381,14 +431,14 @@ rules for deciding on the order of parameters to a procedure:
     be the first argument to each of the procedures \(or after the sub-command
     argument\).
 
-## Procedure bodies
+## <a id='toc-17'></a>Procedure bodies
 
 The body of a procedure follows the declaration. See Section 6 for the coding
 conventions that govern procedure bodies. The curly braces enclosing the body
 should be on different lines, as shown in the examples above, even if the body
 of the procedure is empty.
 
-# Naming conventions
+# <a id='toc-18'></a>Naming conventions
 
 Choosing names is one of the most important aspects of programming. Good names
 clarify the function of a program and reduce the need for other documentation.
@@ -396,7 +446,7 @@ Poor names result in ambiguity, confusion, and error. This section gives some
 general principles to follow when choosing names and lists specific rules for
 name syntax, such as capitalization.
 
-## General considerations
+## <a id='toc-19'></a>General considerations
 
 The ideal variable name is one that instantly conveys as much information as
 possible about the purpose of the variable it refers to. When choosing names,
@@ -426,7 +476,7 @@ be misinterpreted or confused. Here are some things to consider:
     changing its name to **src** makes the name less generic and hence
     conveys more information.
 
-## Basic syntax rules
+## <a id='toc-20'></a>Basic syntax rules
 
 Below are some specific rules governing the syntax of names. Please follow the
 rules exactly, since they make it possible to determine certain properties of
@@ -478,13 +528,13 @@ a variable just from its name.
 		       eval $scrollCmd $args
 		   }
 
-# Low-level coding conventions
+# <a id='toc-21'></a>Low-level coding conventions
 
 This section describes several low-level syntactic rules for writing Tcl code.
 These rules help to ensure that all of the Tcl code looks the same, and they
 prohibit a few confusing coding constructs.
 
-## Indents are 4 spaces
+## <a id='toc-22'></a>Indents are 4 spaces
 
 Each level of indentation should be four spaces. There are ways to set 4-space
 indents in all of the most common editors. Be sure that your editor really
@@ -492,7 +542,7 @@ uses four spaces for the indent, rather than just displaying tabs as four
 spaces wide; if you use the latter approach then the indents will appear eight
 spaces wide in other editors.
 
-## Code comments occupy full lines
+## <a id='toc-23'></a>Code comments occupy full lines
 
 Comments that document code should occupy full lines, rather than being tacked
 onto the ends of lines containing code. The reason for this is that
@@ -526,7 +576,7 @@ first word of each sentence, and so on.
 	    }
 	}
 
-## Continuation lines are indented 8 spaces
+## <a id='toc-24'></a>Continuation lines are indented 8 spaces
 
 You should use continuation lines to make sure that no single line exceeds 80
 characters in length. Continuation lines should be indented 8 spaces so that
@@ -540,13 +590,13 @@ brackets if possible. I try to start each continuation line with an operator
 such as **\***, **&&**, or **\|\|**; this makes it clear that the line is a
 continuation, since a new statement would never start with such an operator.
 
-## Only one command per line
+## <a id='toc-25'></a>Only one command per line
 
 You should only have one Tcl command per line on the page. Do not use the
 semi-colon character to place multiple commands on the same line. This makes
 the code easier to read and helps with debugging.
 
-## Curly braces: \{ goes at the end of a line
+## <a id='toc-26'></a>Curly braces: \{ goes at the end of a line
 
 Open curly braces can not appear on lines by themselves in Tcl. Instead, they
 should be placed at the end of the preceding line. Close curly braces are
@@ -572,7 +622,7 @@ unwanted Tcl substitutions. It also makes it easier to set breakpoints in a
 debugger, since it guarantees that each statement is on a separate line and
 can be named individually.
 
-## Parenthesize expressions
+## <a id='toc-27'></a>Parenthesize expressions
 
 Use parentheses around each subexpression in an expression to make it
 absolutely clear what is the evaluation order of the expression \(a reader of
@@ -585,7 +635,7 @@ Instead, type this:
 
 	   if {($x > 22) && ($y <= 47)} ...
 
-## Always use the return statement
+## <a id='toc-28'></a>Always use the return statement
 
 You should always explicitly use the **return** statement to return values
 from a Tcl procedure. By default Tcl will return the value of the last Tcl
@@ -617,7 +667,7 @@ But rather, type this:
 For Tcl procedures that have no return value a single **return** statement
 with no arguments is placed at the end of the procedure.
 
-## Switch statements
+## <a id='toc-29'></a>Switch statements
 
 The **switch** statement should be formatted as below. Always use the
 **--** option to avoid having the string be confused with an option. This
@@ -639,7 +689,7 @@ that this is an exception to the standard commenting conventions.
 	       }
 	   }
 
-## If statements
+## <a id='toc-30'></a>If statements
 
 Never use the **then** word of an **if** statement. It is syntactic sugar
 that really isn't that useful. However, the **else** word should always be
@@ -654,7 +704,7 @@ language. Here is an example:
 	       ...
 	   }
 
-# Documenting code
+# <a id='toc-31'></a>Documenting code
 
 The purpose of documentation is to save time and reduce errors. Documentation
 is typically used for two purposes. First, people will read the documentation
@@ -670,7 +720,7 @@ easier than deciphering the code. Try to pick out the most important things
 that will help people to understand your code and focus on these in your
 documentation.
 
-## Document things with wide impact
+## <a id='toc-32'></a>Document things with wide impact
 
 The most important things to document are those that affect many different
 pieces of a program. Thus it is essential that every procedure interface,
@@ -691,7 +741,7 @@ provides enough information to figure out what is going on. For long
 procedures I place a comment block before each major piece of the procedure to
 clarify the overall flow through the procedure.
 
-## Don't just repeat what's in the code
+## <a id='toc-33'></a>Don't just repeat what's in the code
 
 The most common mistake I see in documentation \(besides it not being there at
 all\) is that it repeats what is already obvious from the code, such as this
@@ -738,7 +788,7 @@ from the procedure's name. Here is a much more useful comment:
 This comment tells _why_ you might want to use the procedure, in addition to
 _what_ it does, which makes the comment much more useful.
 
-## Document each thing in exactly one place
+## <a id='toc-34'></a>Document each thing in exactly one place
 
 Systems evolve over time. If something is documented in several places, it
 will be hard to keep the documentation up to date as the system changes.
@@ -759,7 +809,7 @@ reference this body in the other places where the decision is used. If all
 else fails, add a block of comments to the header page of one of the files
 implementing the decision.
 
-## Write clean code
+## <a id='toc-35'></a>Write clean code
 
 The best way to produce a well-documented system is to write clean and simple
 code. This way there won't be much to document. If code is clean, it means
@@ -769,7 +819,7 @@ a simple concept behind the code. If not, perhaps you should rethink the code.
 If it takes a lot of documentation to explain a piece of code, it is a sign
 that you haven't found a clean solution to the problem.
 
-## Document as you go
+## <a id='toc-36'></a>Document as you go
 
 It is extremely important to write the documentation as you write the code.
 It's very tempting to put off the documentation until the end; after all, the
@@ -790,7 +840,7 @@ of the procedures. This way I can think about the overall structure and how
 the pieces fit together before getting bogged down in the details of
 individual procedures.
 
-## Document tricky situations
+## <a id='toc-37'></a>Document tricky situations
 
 If code is non-obvious, meaning that its structure and correctness depend on
 information that won't be obvious to someone reading it for the first time, be
@@ -800,7 +850,7 @@ fixing a bug, be sure to add a comment explaining the problem and its
 solution. Of course, it's even better if you can fix the bug in a way that
 eliminates the subtle behavior, but this isn't always possible.
 
-# Testing
+# <a id='toc-38'></a>Testing
 
 One of the environments where Tcl works best is for testing. While Tcl has
 traditionally been used for testing C code it is equally as good at testing
@@ -812,7 +862,7 @@ need to do is type your test cases into a script file where they can be
 reused, rather than typing them interactively where they vanish after they're
 run.
 
-## Basics
+## <a id='toc-39'></a>Basics
 
 Tests should be organized into script files, where each file contains a
 collection of related tests. Individual tests should be based on the procedure
@@ -866,7 +916,7 @@ Tcl and Tk to see how they are structured. You may also want to look at the
 additional features that provide more verbose output or restrict the set of
 tests that are run.
 
-## Organizing tests
+## <a id='toc-40'></a>Organizing tests
 
 Organize your tests to match the code being tested. The best way to do this is
 to have one test file for each source code file, with the name of the test
@@ -886,7 +936,7 @@ approach the relationship between tests and particular pieces of code is much
 less obvious, so it is harder to maintain the tests as the code evolves. I
 don't recommend using this approach for new tests.
 
-## Coverage
+## <a id='toc-41'></a>Coverage
 
 When writing tests, you should attempt to exercise every line of source code
 at least once. There will be occasionally be code that you can't exercise,
@@ -910,7 +960,7 @@ is the first element, last element, only element, and neither first element
 nor last. Try to find all the places where different pieces of code interact
 in unusual ways, and exercise the different possible interactions.
 
-## Fixing bugs
+## <a id='toc-42'></a>Fixing bugs
 
 Whenever you find a bug in your code it means that the test suite wasn't
 complete. As part of fixing the bug, you should add new tests that detect the
@@ -921,7 +971,7 @@ know you've really fixed something. Use bugs to refine your testing approach:
 think about what you might be able to do differently when you write tests in
 the future to keep bugs like this one from going undetected.
 
-## Tricky features
+## <a id='toc-43'></a>Tricky features
 
 I also use tests as a way of illustrating the need for tricky code. If a piece
 of code has an unusual structure, and particularly if the code is hard to
@@ -934,7 +984,7 @@ will be able to use the test to understand why the code needs to be the way it
 is. Illustrative tests are not a substitute for good documentation, but they
 provide a useful addition.
 
-## Test independence
+## <a id='toc-44'></a>Test independence
 
 Try to make tests independent of each other, so that each test can be
 understood in isolation. For example, one test shouldn't depend on commands
@@ -953,9 +1003,9 @@ tests, modify the setup again, and so on. If you do this, it will be hard for
 people to figure out what the setup is at any given point and when they add
 tests later they are likely to break the setup.
 
-# Miscellaneous
+# <a id='toc-45'></a>Miscellaneous
 
-## Porting issues
+## <a id='toc-46'></a>Porting issues
 
 Writing portable scripts in Tcl is actually quite easy as Tcl itself is quite
 portable. However, issues do arise that may require writing platform specific
@@ -973,7 +1023,7 @@ should always use provided high level dialog boxes instead or creating your
 own. The **font** and **menu** commands has also be revamped to make
 writing cross-platform code easier.
 
-## Changes files
+## <a id='toc-47'></a>Changes files
 
 Each package should contain a file namedchanges that keeps a log of all
 significant changes made to the package. The **changes** file provides a way
@@ -1007,8 +1057,9 @@ higher detail within it. This has the advantage of having more tooling
 support, but tends to be so verbose that the shorter summaries in the changes
 file are still written up by the core maintainers before each release.\)_
 
-# Copyright
+# <a id='toc-48'></a>Copyright
 
 The original version of this document is copyright \(C\) 1997 Sun Microsystems,
 Inc. Revisions to reflect current community best-practice are public domain.
+
 
