Make clear that real numbers are supported. Use 'digit separator' to describe concept.

--- a/tip/551.md
+++ b/tip/551.md
@@ -12,29 +12,31 @@
 
 # Abstract
 
-This TIP proposes that all numbers in scripts shall allow underscores
-for readability of code.
+This TIP proposes that all numbers in scripts shall allow digit
+separators in the form of underscore characters for readability of
+code.
 
 # Rationale and Discussion
 
 In most modern programming languages, it is possible to group the
 digits in the program's source code to make it easier to read; Ada, C#
 (from version 7.0), D, Haskell (from GHC version 8.6.1), Java, OCaml,
-Perl, Python (from version 3.6), Ruby, Rust, and Swift all use the
-underscore (`_`) character for this purpose. All these languages allow
-nine hundred million to be entered as `900_000_000`.
+Perl, Python (from version 3.6), Ruby, Rust, and Swift all allow use
+of a digit seperator character, specifically the underscore (`_`)
+character, for this purpose. All these languages allow nine hundred
+million to be entered as `900_000_000`.
 
 This TIP proposes to change TCL to include this ability.
 
 # Specification
 
-To allow underscore in numerical constants (decimal, octal, 0x... 0b...
-0d... and 0...) the underscore character would be simply an aid to
-visibility. This character would serve as a comment in the sense it
-would be allowed in the program source code but have no semantic
-affect. Any number of underscores would be allowed and their positions
-would be unrestricted except where a number would no longer be a
-number.
+To allow underscore in all numerical constants (decimal, octal,
+0x... 0b... 0d... 0..., and real numbers) the underscore character
+would be simply an aid to visibility. This character would serve as a
+comment in the sense it would be allowed in the program source code
+but have no semantic affect. Any number of underscores would be
+allowed and their positions would be unrestricted except where a
+number would no longer be a number, i.e., as the first character.
 
 For example,
 
@@ -45,8 +47,8 @@ For example,
 A number is identified in the routine `TclParseNumber` and scans the
 text until the end of the number. It accepts several formats. The key
 is that a number is a word that begins with a decimal digit and can
-have several forms for decimal, octal, hexidecimal, and binary. The
-convention is now to use a 2 character prefix, 0x, 0b, 0o, and the
+have several forms for decimal, octal, hexidecimal, binary, and real. The
+convention currently is to use a 2 character prefix, 0x, 0b, 0o, and the
 newest one, 0d. This proposal would allow an underscore following the
 first digit or the letter that designates the number base, to anywhere
 up to and including the end of the number. There can be multiple
@@ -68,9 +70,9 @@ would not be allowed, since that would not be a number.
 The implementation would be to simply bypass the `_` in all cases during
 the processing of the number in the routine TclParseNumber.
 
-The implementation was tested with 4 lines of code at the beginning of
-the function. It is at the main while loop in TclParseNumber and
-includes this,
+A preliminary implementation was tested with 4 lines of code at the
+beginning of the function. It is at the main while loop in
+TclParseNumber and includes this,
 
 
     while (1) {
